--- a/content/css/main-ltr.css
+++ b/content/css/main-ltr.css
@@ -61,7 +61,7 @@ body {
 .desctop-nav {
   width: 70%;
   float: right;
-  margin-right: 3rem;
+  margin-right: 1rem;
   -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 1% 100%);
           clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 1% 100%);
 }
@@ -130,6 +130,7 @@ body {
   opacity: 0.5;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
+  z-index: 90;
 }
 .mobile-nav__overlay.is-active {
   right: 0;
@@ -206,6 +207,44 @@ body {
 }
 .mobile-nav .mobile-nav__info span a {
   color: #3a2e62;
+}
+
+.hero {
+  width: 100%;
+  margin-top: -10px;
+}
+.hero .item {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: -webkit-gradient(linear, left top, right top, from(#012863), to(rgba(1, 40, 99, 0))), url(../assets/img/hero/slider.png);
+  background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)), url(../assets/img/hero/slider.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+}
+.hero .item h1 {
+  font-size: calc(1.5rem + 4vw);
+}
+.hero .item .main__btn {
+  border: 0;
+  padding: 1rem 1.5rem;
+  -webkit-clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+          clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+}
+.hero .item .main__btn a {
+  color: white;
+}
+.hero .item .redone {
+  background-color: #db1c29;
+}
+.hero .item .trasone {
+  background-color: transparent;
+  border: 2px solid #999999;
 }
 
 .upperbar__text {
