--- a/content/scss/_main.scss
+++ b/content/scss/_main.scss
@@ -5,6 +5,7 @@
 @import "base/base";
 @import "base/reset";
 // components
+@import "components/buttons";
 // layout
 @import "layout/footer";
 @import "layout/forms";
