--- a/content/css/main-rtl.css
+++ b/content/css/main-rtl.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap");
 body {
   direction: rtl;
   font-family: "Tajawal", sans-serif;
@@ -7,8 +8,16 @@ input {
   text-align: right;
 }
 
+*:not(i) {
+  font-family: "Tajawal", sans-serif !important;
+}
+
 .bg_main_color {
   background-color: #3a2e62;
+}
+
+.bg_red_color {
+  background-color: #db1c29;
 }
 
 .text_main_color {
@@ -17,6 +26,14 @@ input {
 
 .fontf__oswald {
   font-family: "Oswald", sans-serif;
+}
+
+.text-color {
+  color: #999999;
+}
+
+.upperbar__text {
+  color: #8a9db9;
 }
 
 h1,
@@ -46,6 +63,68 @@ body {
   height: 1000vh;
 }
 
+.main__btn {
+  border: 0;
+  padding: 1rem 1.5rem;
+  -webkit-clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+          clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+}
+.main__btn:hover {
+  background-color: #3a2e62;
+}
+.main__btn a {
+  color: white;
+}
+
+.bordered__btn {
+  position: relative;
+  background-color: transparent;
+  padding: 1rem 1.25rem;
+  border: 0;
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+}
+.bordered__btn::after {
+  content: "";
+  position: absolute;
+  border: solid #395173;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+  border-left-width: 2px;
+  border-right-width: 0;
+  -webkit-transform: skewX(-12deg);
+          transform: skewX(-12deg);
+  inset: 0;
+}
+.bordered__btn::before {
+  content: "";
+  position: absolute;
+  border: solid #395173;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+  border-left-width: 0;
+  border-right-width: 2px;
+  -webkit-transform: skewX(-12deg);
+          transform: skewX(-12deg);
+  inset: 0;
+}
+.bordered__btn:hover {
+  background-color: white;
+  -webkit-clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+          clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+}
+.bordered__btn:hover::after, .bordered__btn:hover::before {
+  display: non;
+}
+.bordered__btn:hover a {
+  color: #3a2e62;
+}
+.bordered__btn a {
+  color: white;
+}
+
 .navbar__box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -57,21 +136,25 @@ body {
   margin-bottom: 6px;
 }
 
-.desctop-nav {
+.navbar__box__text a {
+  color: #3a2e62;
+}
+
+.descktop-nav {
   width: 70%;
   float: left;
   margin-left: 1rem;
   -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 1% 100%);
           clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 1% 100%);
 }
-.desctop-nav .navslist {
+.descktop-nav .navslist {
   display: inline-block;
 }
-.desctop-nav .navslist li {
+.descktop-nav .navslist li {
   display: inline-block;
   margin-inline: 1.75rem;
 }
-.desctop-nav button {
+.descktop-nav button {
   border: 0;
   background-color: #3a2e62;
   color: white;
@@ -80,7 +163,7 @@ body {
   -webkit-transition: background 0.4s ease-in-out;
   transition: background 0.4s ease-in-out;
 }
-.desctop-nav button:hover {
+.descktop-nav button:hover {
   background-color: #1f1834;
 }
 
@@ -95,7 +178,7 @@ body {
   background: none;
   outline: none;
   border: none;
-  float: right;
+  float: left;
 }
 .hamburger .bar, .hamburger::after, .hamburger::before {
   content: "";
@@ -124,7 +207,7 @@ body {
   width: 100%;
   height: 100%;
   top: 0;
-  right: -100%;
+  left: -100%;
   background-color: black;
   opacity: 0.5;
   -webkit-transition: 0.5s ease-in-out;
@@ -132,13 +215,13 @@ body {
   z-index: 90;
 }
 .mobile-nav__overlay.is-active {
-  right: 0;
+  left: 0;
 }
 
 .mobile-nav {
   position: fixed;
   top: 0;
-  right: -100%;
+  left: -100%;
   min-height: 100vh;
   display: block;
   z-index: 100;
@@ -155,7 +238,7 @@ body {
   padding: 2rem;
 }
 .mobile-nav.is-active {
-  right: 0;
+  left: 0;
 }
 .mobile-nav .closing_btn {
   width: 50px;
@@ -220,46 +303,28 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: -webkit-gradient(linear, left top, right top, from(#012863), to(rgba(1, 40, 99, 0))), url(../assets/img/hero/slider.png);
-  background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)), url(../assets/img/hero/slider.png);
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
 }
-.hero .item h1 {
-  font-size: calc(1.5rem + 4vw);
+.hero .item.slider-1 {
+  background-image: -webkit-gradient(linear, left top, right top, from(#012863), to(rgba(1, 40, 99, 0))), url(../assets/img/hero/slider.png);
+  background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)), url(../assets/img/hero/slider.png);
 }
-.hero .item .main__btn {
-  border: 0;
-  padding: 1rem 1.5rem;
-  -webkit-clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
-          clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+.hero .item.slider-2 {
+  background-image: -webkit-gradient(linear, left top, right top, from(#012863), to(rgba(1, 40, 99, 0))), url(../assets/img/hero/slider-2.jpg);
+  background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)), url(../assets/img/hero/slider-2.jpg);
 }
-.hero .item .main__btn a {
-  color: white;
+.hero .item.slider-3 {
+  background-image: -webkit-gradient(linear, left top, right top, from(#012863), to(rgba(1, 40, 99, 0))), url(../assets/img/hero/slider-3.png);
+  background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)), url(../assets/img/hero/slider-3.png);
 }
-.hero .item .redone {
-  background-color: #db1c29;
+.hero .item .hero__content {
+  width: 75%;
 }
-.hero .item .trasone {
-  background-color: transparent;
-  border: 2px solid #999999;
-}
-
-.upperbar__text {
-  color: #8a9db9;
-}
-
-.navbar__box__text p {
-  color: #999999;
-}
-
-.navbar__box__text a {
-  color: #3a2e62;
-}
-
-.navslist li a {
-  color: white;
+.hero .item .hero__content h1 {
+  font-size: calc(1.5rem + 3vw);
+  margin-bottom: 1rem;
 }
 
 /*# sourceMappingURL=main-rtl.css.map */
