--- a/content/scss/pages/_home.scss
+++ b/content/scss/pages/_home.scss
@@ -1,6 +1,7 @@
 .hero {
   width: 100%;
   margin-top: -10px;
+
   .item {
     height: 100vh;
     display: flex;
@@ -8,24 +9,85 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+
     &.slider-1 {
       background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)),
-        url(../assets/img/hero/slider.png);
+        url(../assets/img/hero/slider.webp);
     }
+
     &.slider-2 {
       background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)),
-        url(../assets/img/hero/slider-2.jpg);
+        url(../assets/img/hero/slider-2.webp);
     }
+
     &.slider-3 {
       background-image: linear-gradient(90deg, #012863 0%, rgba(1, 40, 99, 0)),
-        url(../assets/img/hero/slider-3.png);
+        url(../assets/img/hero/slider-3.webp);
     }
+
     .hero__content {
       width: 75%;
+
       h1 {
         font-size: calc(1.5rem + 3vw);
         margin-bottom: 1rem;
       }
+    }
+  }
+}
+
+.services-section {
+  max-height: fit-content;
+  position: relative;
+  background-color: white;
+  margin-top: -7rem;
+  z-index: 10;
+  border-radius: 1px;
+  overflow: visible !important;
+  border-bottom: 10px solid $red-color;
+  padding: 0 3rem;
+  overflow: visible !important;
+
+  .services__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.6s ease-in-out;
+    overflow: visible !important;
+
+    &:hover {
+      transform: translateY(-90px);
+      z-index: 100;
+      .sercices__icon {
+        border: 4px solid $red-color;
+        background-color: white;
+        margin-bottom: 1rem;
+      }
+      a {
+        opacity: 1;
+      }
+    }
+
+    .sercices__icon {
+      width: 135px;
+      height: 135px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      z-index: 10000;
+    }
+    h3 {
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    p {
+      text-align: center;
+    }
+    & > a {
+      transition: all 0.6s ease-in-out;
+      opacity: 0;
     }
   }
 }
