--- a/content/css/main-ltr.css
+++ b/content/css/main-ltr.css
@@ -20,6 +20,10 @@ input {
   color: #3a2e62;
 }
 
+.text_red_color {
+  color: #db1c29;
+}
+
 .fontf__oswald {
   font-family: "Oswald", sans-serif;
 }
@@ -392,6 +396,123 @@ body {
   -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
   opacity: 0;
+}
+
+.info_section {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(219, 28, 41, 0.9)), to(rgba(219, 28, 41, 0.9))), url(../assets/img/info-section/services-cta-bg.png);
+  background-image: linear-gradient(90deg, rgba(219, 28, 41, 0.9) 0%, rgba(219, 28, 41, 0.9)), url(../assets/img/info-section/services-cta-bg.png);
+  background-repeat: no-repeat;
+  -webkit-clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+          clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+  background-size: cover;
+  position: relative;
+  padding-block: 2rem;
+  padding-left: 2.5rem;
+  color: white;
+}
+.info_section .row {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.info_section .info_icon {
+  text-align: center;
+  color: #3a2e62;
+}
+.info_section .info_icon i {
+  font-size: 2rem;
+  padding: 1rem;
+  background: white;
+  border-radius: 50%;
+}
+.info_section a {
+  color: white;
+  -webkit-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+.info_section a:hover {
+  color: #3a2e62;
+}
+
+@media screen and (max-width: 400px) {
+  .info_section {
+    padding-left: 0;
+  }
+}
+.principles {
+  background-color: #f3f4f6;
+  position: relative;
+}
+.principles ul span {
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0 0.5rem;
+  background-color: #db1c29;
+  color: white;
+  -webkit-clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+          clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+}
+.principles .principles__vid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.principles .principles__vid .video__icon {
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  background-color: white;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  -webkit-transition-property: background, color;
+  transition-property: background, color;
+}
+.principles .principles__vid .video__icon:hover {
+  background-color: #3a2e62;
+}
+.principles .principles__vid .video__icon:hover i {
+  color: white;
+}
+
+.vid__modle {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  background-color: #000000ba;
+}
+.vid__modle .closing_btn-vid {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  color: white;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=main-ltr.css.map */
