--- a/content/scss/base/_base.scss
+++ b/content/scss/base/_base.scss
@@ -7,6 +7,9 @@
 .text_main_color {
   color: $main-color;
 }
+.text_red_color {
+  color: $red-color;
+}
 .fontf__oswald {
   font-family: "Oswald", sans-serif;
 }
