--- a/content/scss/pages/_home.scss
+++ b/content/scss/pages/_home.scss
@@ -91,3 +91,101 @@
     }
   }
 }
+
+.info_section {
+  background-image: linear-gradient(
+      90deg,
+      rgba(219, 28, 41, 0.9) 0%,
+      rgba(219, 28, 41, 0.9)
+    ),
+    url(../assets/img/info-section/services-cta-bg.png);
+  background-repeat: no-repeat;
+  clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+  background-size: cover;
+  position: relative;
+  padding-block: 2rem;
+  padding-left: 2.5rem;
+  color: white;
+  .row {
+    align-items: center;
+    justify-content: center;
+  }
+  .info_icon {
+    text-align: center;
+    color: $main-color;
+    i {
+      font-size: 2rem;
+      padding: 1rem;
+      background: white;
+      border-radius: 50%;
+    }
+  }
+  a {
+    color: white;
+    transition: color 0.3s ease-in-out;
+    &:hover {
+      color: $main-color;
+    }
+  }
+}
+@media screen and (max-width: 400px) {
+  .info_section {
+    padding-left: 0;
+  }
+}
+
+.principles {
+  background-color: #f3f4f6;
+  position: relative;
+  ul {
+    span {
+      width: 1.5rem;
+      height: 1.5rem;
+      padding: 0 0.5rem;
+      background-color: $red-color;
+      color: white;
+      clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+    }
+  }
+  .principles__vid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .video__icon {
+      position: absolute;
+      width: 90px;
+      height: 90px;
+      background-color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: 0.3s ease-in-out;
+      transition-property: background, color;
+      &:hover {
+        background-color: $main-color;
+        i {
+          color: white;
+        }
+      }
+    }
+  }
+}
+
+.vid__modle {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  background-color: #000000ba;
+  .closing_btn-vid {
+    position: absolute;
+    top: 5%;
+    #{$e}: 3%;
+    color: white;
+    cursor: pointer;
+  }
+}
