--- a/content/scss/pages/_home.scss
+++ b/content/scss/pages/_home.scss
@@ -223,3 +223,28 @@
     }
   }
 }
+@media screen and (max-width: 550px) {
+  .quote {
+    padding-top: 1rem;
+  }
+  .quote__content {
+    padding: 1rem 2rem 0 2rem;
+  }
+}
+
+.numbers {
+  background-image: linear-gradient(
+      rgba(58, 46, 98, 0.9),
+      rgba(58, 46, 98, 0.9)
+    ),
+    url(../assets/img/numbers/fact-bg-02-1.jpg);
+  background-size: cover;
+  color: white;
+  padding: 5rem 0;
+  span {
+    font-size: 3rem;
+  }
+  .numbers__icon {
+    font-size: 4rem;
+  }
+}
