--- a/content/css/main-ltr.css
+++ b/content/css/main-ltr.css
@@ -511,6 +511,47 @@ a {
   cursor: pointer;
 }
 
+.owl-carousel-testimonials .owl-stage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.testimonials {
+  background-image: url(../assets/img/testimonials/map-bg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.testimonials .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  height: 100%;
+  padding: 2rem 2.5rem;
+  background: #fff6f6ac;
+  -webkit-box-shadow: -18px -8px 10px -24px rgba(0, 0, 0, 0.6);
+          box-shadow: -18px -8px 10px -24px rgba(0, 0, 0, 0.6);
+  -webkit-clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+          clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+}
+.testimonials__card {
+  position: relative;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .quote {
   padding-top: 10rem;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(58, 46, 98, 0.2)), to(rgba(58, 46, 98, 0.2))), url(../assets/img/quote/price-cta-bg.png);
