--- a/content/scss/_main.scss
+++ b/content/scss/_main.scss
@@ -6,6 +6,9 @@
 @import "base/reset";
 // components
 @import "components/buttons";
+@import "components/banar";
+@import "components/number-list";
+@import "components/public-fotm";
 // layout
 @import "layout/footer";
 @import "layout/forms";
