--- a/content/css/main-rtl.css
+++ b/content/css/main-rtl.css
@@ -125,6 +125,70 @@ a {
   color: white;
 }
 
+.banar {
+  height: 40vh;
+  margin-top: 3.63rem;
+  position: relative;
+}
+.banar__content {
+  color: white;
+  position: absolute;
+  inset: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #3a2e62ce;
+}
+
+@media screen and (max-width: 991px) {
+  .banar {
+    margin-top: 0;
+  }
+}
+.number__list span {
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0 0.5rem;
+  background-color: #db1c29;
+  color: white;
+  -webkit-clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+          clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
+  margin-left: 0.5rem;
+}
+
+.public__form input,
+.public__form textarea {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+  border-color: #dee2e6 !important;
+}
+.public__form__form__input {
+  border-left: 0;
+}
+.public__form .input-group-text {
+  color: #3a2e62;
+  border: 0;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0;
+  background-color: transparent;
+}
+.public__form #basic-addon3 {
+  margin-left: 1rem;
+}
+
 .navbar__box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -140,21 +204,52 @@ a {
   color: #3a2e62;
 }
 
-.descktop-nav {
-  width: 70%;
+.desktop-nav {
+  min-width: 70%;
   float: left;
   margin-left: 1rem;
-  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 1% 100%);
-          clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 1% 100%);
 }
-.descktop-nav .navslist {
+.desktop-nav .navslist {
   display: inline-block;
+  position: relative;
 }
-.descktop-nav .navslist li {
+.desktop-nav .navslist li {
   display: inline-block;
   margin-inline: 1.75rem;
+  padding-block: 1rem;
 }
-.descktop-nav button {
+.desktop-nav .navslist li.desktop__dropdown.desktop__dropdown:hover .dropdown__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.desktop-nav .navslist li.desktop__dropdown .dropdown__content {
+  display: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  top: 100%;
+  margin: 0;
+  padding: 0.25rem;
+  z-index: 100;
+}
+.desktop-nav .navslist li.desktop__dropdown .dropdown__content li {
+  margin: 0 0.5rem;
+  padding: 0.5rem;
+}
+.desktop-nav .navslist li.desktop__dropdown .dropdown__content a:hover {
+  color: #db1c29;
+}
+.desktop-nav button {
   border: 0;
   background-color: #3a2e62;
   color: white;
@@ -163,7 +258,7 @@ a {
   -webkit-transition: background 0.4s ease-in-out;
   transition: background 0.4s ease-in-out;
 }
-.descktop-nav button:hover {
+.desktop-nav button:hover {
   background-color: #1f1834;
 }
 
@@ -267,13 +362,67 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.mobile-nav .mobile-nav__list a {
+.mobile-nav .mobile-nav__list > a {
   position: relative;
   display: inline-block;
   padding: 1rem 0.5rem;
   color: #3a2e62;
   font-weight: bold;
   border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown span {
+  position: relative;
+  display: inline-block;
+  padding: 1rem 0.5rem;
+  color: #3a2e62;
+  font-weight: bold;
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown__content {
+  display: none;
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown__content li {
+  padding: 0.5rem 0.5rem;
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown__content.is-active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown .plus__btn {
+  position: relative;
+  display: block;
+  width: 15px;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: none;
+  outline: none;
+  border: none;
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown .plus__btn .bar, .mobile-nav .mobile-nav__list .mobile__dropdown .plus__btn::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown .plus__btn::before {
+  -webkit-transform: rotate(-90deg) translate(-3px, 0px);
+          transform: rotate(-90deg) translate(-3px, 0px);
+}
+.mobile-nav .mobile-nav__list .mobile__dropdown .plus__btn.is-active:before {
+  -webkit-transform: rotate(0deg) translate(0px, 3px);
+          transform: rotate(0deg) translate(0px, 3px);
 }
 .mobile-nav .mobile-nav__info {
   display: -webkit-box;
@@ -293,7 +442,6 @@ a {
 
 .hero {
   width: 100%;
-  margin-top: -10px;
 }
 .hero .item {
   height: 100vh;
@@ -327,7 +475,7 @@ a {
   margin-bottom: 1rem;
 }
 
-.services-section {
+.outlets-section {
   max-height: -webkit-fit-content;
   max-height: -moz-fit-content;
   max-height: fit-content;
@@ -336,12 +484,10 @@ a {
   margin-top: -7rem;
   z-index: 10;
   border-radius: 1px;
-  overflow: visible !important;
   border-bottom: 10px solid #db1c29;
   padding: 0 3rem;
-  overflow: visible !important;
 }
-.services-section .services__card {
+.outlets-section .outlets__card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -354,22 +500,21 @@ a {
           align-items: center;
   -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
-  overflow: visible !important;
 }
-.services-section .services__card:hover {
+.outlets-section .outlets__card:hover {
   -webkit-transform: translateY(-90px);
           transform: translateY(-90px);
   z-index: 100;
 }
-.services-section .services__card:hover .sercices__icon {
+.outlets-section .outlets__card:hover .outlets__icon {
   border: 4px solid #db1c29;
   background-color: white;
   margin-bottom: 1rem;
 }
-.services-section .services__card:hover a {
+.outlets-section .outlets__card:hover a {
   opacity: 1;
 }
-.services-section .services__card .sercices__icon {
+.outlets-section .outlets__card .outlets__icon {
   width: 135px;
   height: 135px;
   border-radius: 50%;
@@ -385,14 +530,14 @@ a {
   position: relative;
   z-index: 10000;
 }
-.services-section .services__card h3 {
+.outlets-section .outlets__card h3 {
   margin-bottom: 1rem;
   text-align: center;
 }
-.services-section .services__card p {
+.outlets-section .outlets__card p {
   text-align: center;
 }
-.services-section .services__card > a {
+.outlets-section .outlets__card > a {
   -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
   opacity: 0;
@@ -445,15 +590,6 @@ a {
 .principles {
   background-color: #f3f4f6;
   position: relative;
-}
-.principles ul span {
-  width: 1.5rem;
-  height: 1.5rem;
-  padding: 0 0.5rem;
-  background-color: #db1c29;
-  color: white;
-  -webkit-clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
-          clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
 }
 .principles .principles__vid {
   display: -webkit-box;
@@ -524,7 +660,7 @@ a {
 .testimonials {
   background-image: url(../assets/img/testimonials/map-bg.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 .testimonials .item {
   display: -webkit-box;
@@ -536,8 +672,6 @@ a {
   height: 100%;
   padding: 2rem 2.5rem;
   background: #fff6f6ac;
-  -webkit-box-shadow: -18px -8px 10px -24px rgba(0, 0, 0, 0.6);
-          box-shadow: -18px -8px 10px -24px rgba(0, 0, 0, 0.6);
   -webkit-clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
           clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
 }
@@ -566,27 +700,6 @@ a {
   -webkit-clip-path: polygon(7% 0, 100% 0, 93% 100%, 0 100%);
           clip-path: polygon(7% 0, 100% 0, 93% 100%, 0 100%);
   padding: 5rem 5rem 0 5rem;
-  -webkit-filter: drop-shadow(0px 30px 10px rgba(0, 0, 0, 0.06));
-          filter: drop-shadow(0px 30px 10px rgba(0, 0, 0, 0.06));
-}
-.quote__form input,
-.quote__form textarea {
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
-  border-color: #dee2e6 !important;
-}
-.quote__form__form__input {
-  border-left: 0;
-}
-.quote__form .input-group-text {
-  color: #3a2e62;
-  border: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  left: 0;
-  background-color: transparent;
 }
 
 @media screen and (max-width: 550px) {
