--- a/content/scss/layout/_navigation.scss
+++ b/content/scss/layout/_navigation.scss
@@ -1,15 +1,47 @@
-.descktop-nav {
-  width: 70%;
+.desktop-nav {
+  min-width: 70%;
   float: $e;
   margin-#{$e}: 1rem;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 1% 100%);
+
   .navslist {
     display: inline-block;
+    position: relative;
+
     li {
       display: inline-block;
       margin-inline: 1.75rem;
+      padding-block: 1rem;
+
+      &.desktop__dropdown {
+        &.desktop__dropdown:hover .dropdown__content {
+          display: flex;
+          height: fit-content;
+        }
+
+        .dropdown__content {
+          display: none;
+          width: fit-content;
+          height: 0;
+          flex-direction: column;
+          position: absolute;
+          top: 100%;
+          margin: 0;
+          padding: 0.25rem;
+          z-index: 100;
+
+          li {
+            margin: 0 0.5rem;
+            padding: 0.5rem;
+          }
+
+          a:hover {
+            color: $red-color;
+          }
+        }
+      }
     }
   }
+
   button {
     border: 0;
     background-color: $main-color;
@@ -17,6 +49,7 @@
     padding-inline: 3rem;
     text-transform: capitalize;
     transition: background 0.4s ease-in-out;
+
     &:hover {
       background-color: #1f1834;
     }
@@ -69,6 +102,7 @@
   opacity: 0.5;
   transition: 0.5s ease-in-out;
   z-index: 90;
+
   &.is-active {
     #{$e}: 0;
   }
@@ -115,7 +149,8 @@
   .mobile-nav__list {
     display: flex;
     flex-direction: column;
-    a {
+
+    & > a {
       position: relative;
       display: inline-block;
       padding: 1rem 0.5rem;
@@ -123,12 +158,69 @@
       font-weight: bold;
       border-bottom: 2px solid rgba(0, 0, 0, 0.2);
     }
+
+    .mobile__dropdown {
+      border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+
+      span {
+        position: relative;
+        display: inline-block;
+        padding: 1rem 0.5rem;
+        color: $main-color;
+        font-weight: bold;
+      }
+
+      &__content {
+        display: none;
+
+        li {
+          padding: 0.5rem 0.5rem;
+        }
+
+        &.is-active {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+
+      .plus__btn {
+        position: relative;
+        display: block;
+        width: 15px;
+        cursor: pointer;
+        appearance: none;
+        background: none;
+        outline: none;
+        border: none;
+
+        & .bar,
+        &::before {
+          content: "";
+          display: block;
+          width: 100%;
+          height: 3px;
+          background-color: black;
+          transition: 0.2s;
+        }
+
+        &::before {
+          transform: rotate(-90deg) translate(-3px, 0px);
+        }
+
+        &.is-active:before {
+          transform: rotate(0deg) translate(0px, 3px);
+        }
+      }
+    }
   }
+
   .mobile-nav__info {
     display: flex;
     flex-direction: column;
+
     span {
       margin-top: 1rem;
+
       a {
         color: $main-color;
       }
