--- a/content/scss/components/_banar.scss
+++ b/content/scss/components/_banar.scss
@@ -1,7 +1,7 @@
 .banar {
   height: 40vh;
-  margin-top: 3.63rem;
   position: relative;
+  clear: both;
   &__content {
     color: white;
     position: absolute;
