--- a/content/css/main-ltr.css
+++ b/content/css/main-ltr.css
@@ -36,6 +36,10 @@ input {
   color: #8a9db9;
 }
 
+.clr {
+  clear: both !important;
+}
+
 h1,
 h2,
 h3,
@@ -123,8 +127,8 @@ a {
 
 .banar {
   height: 40vh;
-  margin-top: 3.63rem;
   position: relative;
+  clear: both;
 }
 .banar__content {
   color: white;
