--- a/content/css/main-rtl.css
+++ b/content/css/main-rtl.css
@@ -729,4 +729,33 @@ a {
   font-size: 4rem;
 }
 
+.services {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#f7f7f7));
+  background-image: linear-gradient(180deg, #f7f7f7 0%, #f7f7f7 100%);
+}
+.services__card {
+  padding: 2rem 2rem;
+  background-color: white;
+  -webkit-clip-path: polygon(7% 0, 100% 0, 93% 100%, 0 100%);
+          clip-path: polygon(7% 0, 100% 0, 93% 100%, 0 100%);
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+.services__number {
+  position: absolute;
+  background-color: #ffefef;
+  color: #db1c29;
+  top: 0;
+  left: 0;
+  padding: 1.25rem 1.5rem;
+  -webkit-clip-path: polygon(7% 0, 100% 0, 95% 100%, 0 100%);
+          clip-path: polygon(7% 0, 100% 0, 95% 100%, 0 100%);
+}
+
 /*# sourceMappingURL=main-rtl.css.map */
