--- a/content/css/main-rtl.css
+++ b/content/css/main-rtl.css
@@ -344,7 +344,6 @@ a {
   height: 50px;
   cursor: pointer;
   display: inline-block;
-  margin-bottom: 1rem;
 }
 .mobile-nav .closing_btn i {
   padding: 1rem;
@@ -474,7 +473,8 @@ a {
 .hero .item .hero__content {
   width: 75%;
 }
-.hero .item .hero__content h1 {
+.hero .item .hero__content h1,
+.hero .item .hero__content h2 {
   font-size: calc(1.5rem + 3vw);
   margin-bottom: 1rem;
 }
