--- a/content/scss/pages/_home.scss
+++ b/content/scss/pages/_home.scss
@@ -26,7 +26,8 @@
     .hero__content {
       width: 75%;
 
-      h1 {
+      h1,
+      h2 {
         font-size: calc(1.5rem + 3vw);
         margin-bottom: 1rem;
       }
