--- a/content/scss/pages/_services.scss
+++ b/content/scss/pages/_services.scss
@@ -19,3 +19,6 @@
     clip-path: polygon(7% 0, 100% 0, 95% 100%, 0 100%);
   }
 }
+.services__form {
+  background-image: linear-gradient(180deg, #f7f7f7 0%, #f7f7f7 100%);
+}
