--- a/content/css/main-rtl.css
+++ b/content/css/main-rtl.css
@@ -12,6 +12,10 @@ input {
   font-family: "Tajawal", sans-serif !important;
 }
 
+.services__number {
+  left: 15px !important;
+}
+
 .bg_main_color {
   background-color: #3a2e62;
 }
@@ -120,7 +124,7 @@ a {
           clip-path: polygon(11% 0, 100% 0, 89% 100%, 0 100%);
 }
 .bordered__btn:hover::after, .bordered__btn:hover::before {
-  display: non;
+  display: none;
 }
 .bordered__btn:hover a {
   color: #3a2e62;
@@ -447,7 +451,7 @@ a {
   width: 100%;
 }
 .hero .item {
-  height: 100vh;
+  height: 110vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -476,6 +480,10 @@ a {
 .hero .item .hero__content h1,
 .hero .item .hero__content h2 {
   font-size: calc(1.5rem + 3vw);
+  margin-bottom: 1rem;
+}
+.hero .item .hero__content img {
+  width: 250px;
   margin-bottom: 1rem;
 }
 
