--- a/content/scss/pages/_home.scss
+++ b/content/scss/pages/_home.scss
@@ -1,7 +1,7 @@
 .hero {
   width: 100%;
   .item {
-    height: 100vh;
+    height: 110vh;
     display: flex;
     align-items: center;
     background-size: cover;
@@ -29,6 +29,10 @@
       h1,
       h2 {
         font-size: calc(1.5rem + 3vw);
+        margin-bottom: 1rem;
+      }
+      img {
+        width: 250px;
         margin-bottom: 1rem;
       }
     }
